# a2a-client-hub

./: .gitignore  .ignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  HISTORY.md  README.md  issue_129_comment.md  issue_async_continue_audit.md  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements-ci.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251001_1548_68e3e7021941_init.py  20251002_1618_9fc0bc12ae9c_add_cardbox_fields.py  20251003_0937_46d22bc1e2fe_daily_review_run.py  20251010_1318_3e5c3b356025_add_aggregated_dimension_stats.py  20251011_094357_add_session_token_totals.py  20251013_1540_5f7b3f10a6b2_add_agent_message_metadata.py  20251014_1917_3169578ad86b_add_finance_tables.py  20251015_0119_6c6b8f4b9d42_replace_task_notes_with_count.py  20251017_1313_34862baa9b20_add_sage_maxims.py  20251017_1530_f1d9e4d2add5_dimension_user_unique.py  20251017_1531_9e051fca31d6_add_audit_columns_finance_entries.py  20251017_1755_52acb08a7b94_add_actual_event_quick_templates.py  20251018_1847_b8b6306f4dc4_add_deleted_at_to_finance_snapshots.py  20251018_2054_a216ede0bc21_add_vision_exp_rate.py  20251020_1120_c8d1e9c3c2fb_quick_template_persons.py  20251025_2132_cdbc065ed2b2_add_work_recalc_jobs.py  20251026_1225_011a19ab762d_add_ix_tasks_user_cycle_type_start_index.py  20251029_2135_d14d01619ac2_add_available_at.py  20251029_2241_6838112514e9_expand_agent_notifications.py  20251103_1921_b1a2c3d4e5f6_add_cashflow_billing_cycle.py  20251104_1500_7f2d4c6b8a90_cashflow_rollup_and_sign_reshape.py  20251106_1508_66f91eb2388d_add_invitations_table.py  20251107_1502_019c95caa9b1_add_user_daily_llm_usage_table.py  20251115_2031_6056acf817f6_simplify_habit_action_status.py  20251117_2008_814f7cb4c87b_add_trading_plan.py  20251117_2126_de6d75d7f88a_add_plan_binding_to_exchange_rates.py  20251118_1540_7fa8521f1113_add_user_activity_table_and_login_state_.py  20251119_1700_eda2163416bf_add_agent_audit_log_table.py  20251119_2157_167eb8d8d0f6_add_user_llm_credentials_table.py  20251203_1200_1d93926ab9fb_create_note_ingest_jobs.py  20251204_1605_a2325d88f2c1_add_tasks_pagination_index.py  20251229_1530_7e2b3147811a_add_planned_event_occurrence_exceptions.py  20260104_0930_9f3c1b2a4d7e_add_trading_plan_rate_snapshot_ts.py  20260104_1145_c3b9a1d2e4f6_lock_trading_plan_rate_snapshot_ts.py  20260104_1205_6d8a7c2f1a9b_add_cashflow_exchange_rates.py  20260104_1535_1d2e3f4a5b6c_add_trading_plan_rate_snapshot_map.py  20260104_1705_3a1c9f6e8b2d_add_cashflow_snapshot_ts_and_currency.py  20260105_0930_4f1b2c3d4e5f_add_finance_tree_sets.py  20260105_2355_9c8b7a6d5e4f_make_cashflow_path_unique.py  20260130_1215_7a3c8d9e4f20_add_a2a_agent_tables.py  (+54 more)
backend/app/: __init__.py  cli.py  main.py
backend/app/agents/: __init__.py  agent_registry.py  agent_service.py  chat_service.py  context_builder.py  conversation_compressor.py  conversation_history.py  prompt_templates.py  registry.py  service_types.py  session_overview_service.py  session_service.py  token_estimator.py  token_tracker.py  tool_policy.py
backend/app/api/: __init__.py  deps.py  error_codes.py  error_handlers.py  retry_after.py  routing.py
backend/app/cardbox/: __init__.py  async_bridge.py  config.py  context_service.py  data_sync.py  engine_factory.py  init_duckdb_schema.py  service.py  utils.py
backend/app/core/: __init__.py  config.py  constants.py  http_client.py  i18n.py  logging.py  preference_validators.py  secret_vault.py  security.py
backend/app/db/: __init__.py  locking.py  session.py  transaction.py
backend/app/features/: health_check_helpers.py  health_reason_codes.py  working_directory.py
backend/app/handlers/: __init__.py  actual_event_quick_templates.py  actual_events.py  admin.py  agent_message.py  agent_message_block.py  agent_message_chunk.py  agent_session.py  associations.py  associations_async.py  auth.py  cardbox_data_sync.py  dimensions.py  finance_account_trees.py  finance_accounts.py  finance_balance_snapshots.py  finance_cashflow.py  finance_cashflow_trees.py  finance_common.py  finance_exchange_rate_utils.py  finance_exchange_rates.py  finance_rate_snapshots.py  finance_trading.py  food_entries.py  foods.py  habits.py  invitations.py  notes.py  notes_exceptions.py  persons.py  planned_events.py  sage_maxims.py  tag_associations.py  tags.py  tasks.py  user_onboarding.py  user_preferences.py  visions.py
backend/app/integrations/: a2a_error_contract.py  a2a_runtime_status_contract.py
backend/app/middleware/: debug_logging.py
backend/app/platform/: __init__.py  health.py  ops_metrics_refresh.py  scheduler.py  (+1 more)
backend/config/: a2a_agents.example.json
backend/scripts/: backfill_schedule_execution_running_truth.py  clean_stale_tasks.py  dependency_health.sh  find_wrapper_candidates.py  mypy_changed.sh  reset_user_passwords.py  run_vulture.sh  setup_db_schema.py
backend/tests/: README.md  api_utils.py  conftest.py  test_a2a_agent_credentials.py  test_a2a_client.py  test_a2a_client_interoperability.py  test_a2a_error_contract.py  test_a2a_extensions_pagination.py  test_a2a_extensions_service.py  test_a2a_integration.py  test_a2a_invoke_service.py  test_a2a_invoke_service_contract_fallback.py  test_a2a_proxy_security.py  test_a2a_proxy_service.py  test_a2a_runtime_status_contract.py  test_a2a_schedule_execution_cleanup.py  test_a2a_schedule_job.py  test_a2a_schedule_job_lease.py  test_a2a_schedule_routes.py  test_a2a_schedule_timezone_semantics.py  test_a2a_validators.py  test_a2a_websocket.py  test_actual_event_quick_templates_handler.py  test_actual_event_templates_routes.py  test_actual_events_handlers.py  test_actual_events_routes.py  test_admin_agent_audit_routes.py  test_admin_routes.py  test_agent_common.py  test_agent_message_handler_unit.py  test_agent_message_schema.py  test_agent_service_tool_runs.py  test_agent_service_unit.py  test_agentic_routes.py  test_api_deps_ws_ticket.py  test_async_cleanup.py  test_auth.py  test_auth_headers.py  test_card_url_validation.py  test_cardbox_routes.py  (+116 more)
(+1215 files in other folders)
