[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-client-hub"
version = "1.4.0"
description = "Backend API and control plane for a2a-client-hub (FastAPI + PostgreSQL)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "liujuanjuan1984"},
]
keywords = [
    "a2a",
    "agent-to-agent",
    "ai-agents",
    "fastapi",
    "interoperability",
    "control-plane",
    "self-hosted",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Core FastAPI dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "a2a-sdk==0.3.22",
    # Scheduling
    "APScheduler>=3.10.4",
    # Database dependencies
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    # Data validation and serialization
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    # HTTP client and utilities
    "httpx>=0.25.0",
    "requests>=2.33.0",
    # Environment and configuration
    "python-dotenv>=1.0.0",
    # JSON handling
    # JWT handling
    "PyJWT>=2.12.0",
    "pyasn1>=0.6.3",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "cryptography>=46.0.6",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "isort==8.0.0",
    "mypy>=1.10.0",
    "pip-audit>=2.9.0",
    "pre-commit>=3.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/liujuanjuan1984/a2a-client-hub"
Repository = "https://github.com/liujuanjuan1984/a2a-client-hub.git"
Issues = "https://github.com/liujuanjuan1984/a2a-client-hub/issues"

[project.scripts]
a2a-client-hub-api = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic/versions
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
extend_skip = ["alembic/versions"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["app"]
force_single_line = false
include_trailing_comma = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "apscheduler.*",
    "passlib.*",
    "psycopg2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*:",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long - handled by black
]

[tool.ruff.per-file-ignores]
"tests/conftest.py" = ["E402"]  # module level import not at top of file
